# RE-flex

./: CMakeLists.txt
.github/workflows/: build.yml  sanitizer.yml
src/: CMakeLists.txt  main.cpp  reflex.cpp
tests/: rtest.cpp  stest.cpp
